--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -5,8 +5,16 @@ permalink: /teaching/
 author_profile: true
 ---
 
+
+<!--
 {% include base_path %}
 
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
 {% endfor %}
+-->
+
+
+<p>I am currently available for tutoring in maths, further maths and physics.</p>
+<p>I have been tutoring both professionally and voluntarily since 2021, and I have significant experience tutoring for both GCSEs and A Levels, with excellent results. </p>
+<p>Please reach out over email to discuss more, or find my MyTutor page here.</p>
